# mtacpp

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile.in
include/: mta.h
src/: main.cpp
test/: test_alarm.cpp  test_timer.cpp
